# utilityman

./: .gitignore  CHANGELOG.md  PLANNING.md  PUBLISH.md  README.md  main.py  pyproject.toml
scorebug/: __init__.py  cli.py
scripts/: publish.sh
utilityman/: __init__.py  cli.py
