[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "utilityman"
version = "0.3.0"
description = "Follow any MLB game in your shell - the utility player for baseball fans"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31",
]
license = {text = "MIT"}
authors = [{name = "Matt Stiles"}]
keywords = ["mlb", "baseball", "cli", "sports", "live"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: End Users/Desktop",
  "Environment :: Console",
  "Topic :: Utilities",
  "Topic :: Games/Entertainment",
]

[project.scripts]
utilityman = "utilityman.cli:main"

[project.urls]
Homepage = "https://github.com/stiles/utilityman"
Repository = "https://github.com/stiles/utilityman"
Issues = "https://github.com/stiles/utilityman/issues"

[tool.hatch.build.targets.wheel]
packages = ["utilityman"]


